--- a/output.html
+++ b/output.html
@@ -81,7 +81,7 @@
     <header class="clearfix">
         <!-- KEEP HEADER BETWEEN PAGES -->
         <li>
-            <a href="/barba_test.html">
+            <a href="/mapall.html">
      Map
     </a>
         </li>
