added map to index

--- a/output.html
+++ b/output.html
@@ -16442,6 +16442,14 @@
                 </div>
                 <!-- End of grid items-->
             </main>
+
+            <!-- map (first hidden)-->
+            <div id="mapid"></div>
+            <!-- end of: map -->
+
+            <!--To load javascript for map-->
+            <script src="./js/mapall.js"></script>
+
             <!-- End of: THIS WILL BE CHANGED BETWEEN PAGES-->
             <!--To load noUiSlider-->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.0/nouislider.min.js">
