--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
     </script>
     <script defer src="./js/app.js"></script>
     <link href="./css/trans.css" rel="stylesheet">
+
+    <!-- load leaflet for map-->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+    <link rel="stylesheet" href="./css/mapall.css">
+
+    <!-- Make sure you put this AFTER Leaflet 's CSS -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+
 </head>
 
 <!-- content that will not change  -->
@@ -307,7 +315,12 @@
             </main>
             <!-- End of: THIS WILL BE CHANGED BETWEEN PAGES-->
 
+            <!-- map (first hidden)-->
+            <div id="mapid"></div>
+            <!-- end of: map -->
 
+            <!--To load javascript for map-->
+            <script src="./js/mapall.js"></script>
 
             <!--To load noUiSlider-->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.0/nouislider.min.js">
