changes in output - scroll down buttons

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
 
             <!-- end of: map -->
 
+            <!-- HIDE MAP / GRID 
             <script>
                 $('#vis').click(function() {
                     if ($('#mapid').css('visibility') == 'hidden') {
@@ -335,6 +336,7 @@
                     // visible
                 });
             </script>
+            -->
 
             <!--To load javascript for map-->
             <script src="./js/mapall.js "></script>
