--- a/output.html
+++ b/output.html
@@ -328,6 +328,34 @@
                     </div>
                     <!-- /cbp-hrsub -->
                 </li>
+                <li>
+                    <a href="#">
+        Group-by
+       </a>
+                    <div class="cbp-hrsub">
+                        <div class="cbp-hrsub-inner">
+                            <div>
+                                <h4>
+                                    Possible groups
+                                </h4>
+                                <ul>
+                                    <div class="button-group layout-mode-button-group">
+                                        <button class="button is-checked" data-layout-mode="fitRows" checked="checked">original order</button>
+                                        <button class="button" data-layout-mode="cellsByColumn">big</button>
+
+
+                                    </div>
+                                </ul>
+                                <h4>
+                                    else
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- /cbp-hrsub-inner -->
+                    </div>
+                    <!-- /cbp-hrsub -->
+                </li>
+
             </ul>
         </nav>
         <script src="js/cbpHorizontalMenu.min.js">
