before add null item fix on multifilter trim error

--- a/output.html
+++ b/output.html
@@ -342,10 +342,9 @@
                                 </h4>
                                 <ul>
                                     <div class="button-group layout-mode-button-group">
-                                        <button class="button is-checked" data-layout-mode="fitRows" checked="checked">original order</button>
-                                        <button class="button" data-layout-mode="cellsByColumn">big</button>
-
-
+                                        <button class="button is-checked" data-layout-mode="fitRows" checked="checked" data-sort-by="original-order">original order</button>
+                                        <button class="button" data-layout-mode="cellsByColumn" data-group-by='primary' data-sort-by='primary'>primary</button>
+                                        <button class="button" data-layout-mode="cellsByColumn" data-group-by='secondary' data-sort-by='secondary'>secondary</button>
                                     </div>
                                 </ul>
                                 <h4>
