found problem with <null> divs that was messing with the group-by. remember to align divs in one row in the output.html

--- a/output.html
+++ b/output.html
@@ -2684,9 +2684,7 @@
             <p class="n_tel_o_fun" style="display:none;">0</p>
             <p class="Built density (2d built area / void) in 250 meter radius" style="display:none;">0.358161</p>
             <p class="n_auto_tel" style="display:none;">0</p>
-            <p class="Centrality (gravity) score for each building within 15 min. walk r." style="display:none;">
-                <null>
-            </p>
+            <p class="Centrality (gravity) score for each building within 15 min. walk r." style="display:none;">null</p>
             <p class=" building's street-facing front Distance from parcel limits (0 line) in meters" style="display:none;">2.9104e-11</p>
             <p class="n_parks" style="display:none;">0</p>
             <p class="Building's height (simple)" style="display:none;">15.0</p>
@@ -3612,9 +3610,7 @@
             <p class="Parcel size (square meters)" style="display:none;">917</p>
             <p class="n_playgrounds" style="display:none;">20</p>
             <p class="tsunami_flood_line" style="display:none;">1</p>
-            <p class="Building's volume in cubic meter" style="display:none;">
-                <null>
-            </p>
+            <p class="Building's volume in cubic meter" style="display:none;">null</p>
             <p class="Amount of walkalbe Religious buildings (15 min.)" style="display:none;">29</p>
             <p class="Amount of walkable street workout equipment (15 min.)" style="display:none;">4</p>
             <p class="Distance from the Sea in meteres" style="display:none;">343.025418</p>
@@ -14045,7 +14041,7 @@
             <p class="Geo point via Flicker " style="display:none;">396</p>
             <p class="Amount of walkable hospitals and clinics 15. m radius" style="display:none;">7</p>
             <p class="n_kindergartens" style="display:none;">16</p>
-            <p class="primary" style="display:none;"> eclectic</p>
+            <p class="primary" style="display:none;">eclectic</p>
             <p class="secondary" style="display:none;">international_neoclassicism</p><img src="./photos/כ״ץ-יעקוב-יוסף-4_11864.jpg"></div>
         <div class="building_square">
             <p class="id" style="display:none;">11868</p>
@@ -14244,9 +14240,7 @@
             <p class="n_tel_o_fun" style="display:none;">0</p>
             <p class="Built density (2d built area / void) in 250 meter radius" style="display:none;">0.498493</p>
             <p class="n_auto_tel" style="display:none;">0</p>
-            <p class="Centrality (gravity) score for each building within 15 min. walk r." style="display:none;">
-                <null>
-            </p>
+            <p class="Centrality (gravity) score for each building within 15 min. walk r." style="display:none;">null</p>
             <p class=" building's street-facing front Distance from parcel limits (0 line) in meters" style="display:none;">16.398388</p>
             <p class="n_parks" style="display:none;">0</p>
             <p class="Building's height (simple)" style="display:none;">11.1</p>
