--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js ">
     </script>
     <!-- load isotop -->
-    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js ">
-    </script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js "></script>
+    <!-- load isotope's cells by colomn -->
+    <script src="node_modules/isotope-cells-by-column/cells-by-column.js"></script>
+    <!-- load isotope's cells by colomn -->
+    <script src="node_modules/isotope-fit-columns/fit-columns.js"></script>
     <!-- load swup -->
     <script defer="" src="node_modules/swup/dist/swup.min.js">
     </script>
@@ -328,6 +331,35 @@
                     </div>
                     <!-- /cbp-hrsub -->
                 </li>
+                <li>
+                    <a href="#">
+        Group-by
+       </a>
+                    <div class="cbp-hrsub">
+                        <div class="cbp-hrsub-inner">
+                            <div>
+                                <h4>
+                                    Possible groups
+                                </h4>
+                                <ul>
+                                    <div class="button-group layout-mode-button-group" id="group-sort">
+                                        <button class="button is-checked" data-layout-mode="fitRows" checked="checked" data-group-by='non' data-sort-by="original-order">original order</button>
+                                        <button class="button" data-layout-mode="cellsByColumn" data-is-horizontal="true" data-group-by='primary' data-sort-by='primary'>primary</button>
+                                        <button class="button" data-layout-mode="cellsByColumn" data-is-horizontal="true" data-group-by='secondary' data-sort-by='secondary'>secondary</button>
+                                        <button class="button" data-layout-mode="fitRows" checked="checked" data-group-by='non' data-sort-by="original-order">fitcolumns</button>
+
+                                    </div>
+                                </ul>
+                                <h4>
+                                    else
+                                </h4>
+                            </div>
+                        </div>
+                        <!-- /cbp-hrsub-inner -->
+                    </div>
+                    <!-- /cbp-hrsub -->
+                </li>
+
             </ul>
         </nav>
         <script src="js/cbpHorizontalMenu.min.js">
@@ -404,5 +436,6 @@
     </script>
 </body>
 <!-- close body-->
+
 
 </html>
