before inserting group by into order dropdown menu

--- a/output.html
+++ b/output.html
@@ -293,13 +293,13 @@
                 </li>
                 <li>
                     <a href="#">
-       Sort
+       Order
       </a>
                     <div class="cbp-hrsub">
                         <div class="cbp-hrsub-inner">
                             <div>
                                 <h4>
-                                    Test
+                                    sort
                                 </h4>
                                 <ul>
                                     <div class="button-group" id="sorts">
