before adding a tag  href to photo

--- a/output.html
+++ b/output.html
@@ -324,7 +324,7 @@
                                     </div>
                                 </ul>
                                 <h4>
-                                    Possible groups
+                                    group by
                                 </h4>
                                 <ul>
                                     <div class="button-group layout-mode-button-group" id="group-sort">
