adding href to first div elemnt. works. copy and use for python script

--- a/output.html
+++ b/output.html
@@ -416,7 +416,10 @@
             <p class="Amount of walkable hospitals and clinics 15. m radius" style="display:none;">0</p>
             <p class="n_kindergartens" style="display:none;">1</p>
             <p class="primary" style="display:none;"> arab</p>
-            <p class="secondary" style="display:none;">early</p><img src="./photos/יפת-57_1698.jpg"></div>
+            <p class="secondary" style="display:none;">early</p>
+            <a href="#" onClick="window.open('http://www.yahoo.com', '_blank')"><img src="./photos/יפת-57_1698.jpg">
+            </a>
+        </div>
         <div class="building_square" col_header="b">
             <p class="id" style="display:none;">1700</p>
             <p class="long" style="display:none;">34.7641122</p>
