wip detailed page

--- a/building_cards/building_card_test.html
+++ b/building_cards/building_card_test.html
@@ -34,8 +34,14 @@
         </div>
 
         <div class="carousel-button">
-            <span class="material-icons">fiber_manual_record</span>
-            <span class="material-icons">fiber_manual_record</span>
+            <span class="material-icons-outlined" button_num='1'>
+                    radio_button_checked
+                    </span>
+            <span class="material-icons-outlined" button_num='2'>
+                        radio_button_unchecked
+                        </span>
+
+
         </div>
         <span class="material-icons-outlined info-button info-summary" id="buttonLeftFixed">info</span>
         <span class="material-icons-outlined" id="navigate_before">
@@ -45,10 +51,38 @@
         navigate_next
         </span>
     </div>
+
     <div class='detailed-page'>
+        <P> can you see me?</P>
+        <!-- Entire page-->
+        <div class="top_container">
+            <!-- simplex / powerBI -->
+            <div class='simplex_box'>
+                <!-- simplex -->
+                <p> simplex box </p>
+            </div>
+            <div class='graph_box'>
+                <!-- Graph -->
+                <p> graph </p>
+            </div>
+        </div>
+        <!-- close: class="top_container"-->
+
+        <div class="bottom_container">
+            <!-- table -->
+            <div class='table_box'>
+                <p> table </p>
+
+                <!-- table -->
+            </div>
+            <!-- close: class="bottom_container"-->
+
+        </div>
+        <!-- close entire page div -->
         <span class="material-icons-outlined info-button info-detailed" id="buttonLeftFixed">info</span>
 
     </div>
+    <!-- close: class='detailed-page'-->
 </body>
 
 <footer>
